...

  @override
  _ManageFoldersScreenState createState() => _ManageFoldersScreenState();
}

class _ManageFoldersScreenState extends State<ManageFoldersScreen> {
  String selectedProgram = "Bachelors";
  String selectedSemester = "1";
  String? selectedSubject;
  String? selectedFolder;

  List<String> folders = [];

...
